# rss_reader

./: CLAUDE.md  LOCAL_DEV.md  bash.exe.stackdump  compose.yml  package-lock.json  package.json  proxy.ts  railway.toml  start.bat
.claude/: settings.local.json  statusline-command.sh
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/fetcher/: config.py  database.py  embedding_service.py  feed_fetcher.py  main.py  ner_service.py  pyproject.toml  railway.toml  requirements.txt  scheduler.py  tag_extraction_service.py  text_utils.py  user_profile_service.py
app/fetcher/stopwords/: en.txt  zh_tw.txt
data/: bookmarks.ts  entity-tags.ts  feed-items.ts  feeds.ts  fetch-embedding-logs.ts  fetch-logs.ts  fetch-ner-logs.ts  fetch-tag-extraction-logs.ts  keywords.ts  subscriptions.ts  user-profiles.ts
db/: index.ts  schema.ts
docs/: auth.md  data-fetching.md  data-mutations.md  ui.md
drizzle/: 0000_redundant_daimon_hellstrom.sql  0001_clear_kinsey_walden.sql  0002_steady_the_phantom.sql  0003_add_vector_embeddings.sql  0004_abandoned_shape.sql  0005_same_hobgoblin.sql  0006_cold_pixie.sql  0007_amused_ironclad.sql  0008_brown_outlaw_kid.sql  0009_third_microchip.sql  0010_material_deadpool.sql  0011_charming_blink.sql  0012_tricky_chat.sql  0013_far_richard_fisk.sql  0014_blushing_hairball.sql
lib/: utils.ts
notes/: 2026-04-10T00-00-00.txt  DBEAVER_POSTGRESQL_SETUP.md  DBEAVER_QUICK_REFERENCE.md  DBEAVER_VS_SQUIRREL_COMPARISON.md  PODMAN_POSTGRESQL_DATA_STORAGE.md  PODMAN_STORAGE_QUICK_REFERENCE.md  PODMAN_VS_DOCKER.md  PYTHON_ORM_GUIDE.md  README.md  (+6 more)
(+56 files in other folders)
