[project]
name = "rss-fetcher"
version = "0.1.0"
description = "RSS feed fetcher microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
