[project]
name = "rss-fetcher"
version = "0.1.0"
description = "RSS feed fetcher microservice"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.7.0",
    "trafilatura>=2.0.0",
    "sentence-transformers>=3.0.0",
    "keybert>=0.8.0",
    "ckip-transformers>=0.3.0",
    "spacy>=3.7.0,<4.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]
